--- a/Project.toml
+++ b/Project.toml
@@ -7,3 +7,9 @@ version = "0.1.0"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+
+[compat]
+HTTP = "0.8.17"
+JSON = "0.21"
+Tables = "1.0"
+julia = "1.5"
