renamed package to CBDOData3

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "CBSOdata3"
+name = "CBSOData3"
 uuid = "48c1cd6d-8347-489c-8dfd-190617109aa4"
 authors = ["H. Witvliet <henrico@witvliet.net>"]
 version = "0.1.0"
